hphp/hack/test/typecheck/enum_4.php.exp
File "enum_4.php", line 7, characters 24-27:
Enums must be int or string, not a bool (Typing[4024])
